Adds missing flag for Uzbekistan
This adds the css for the flag for Uzbekistan. The flag svg exists, but it is not in the css file.

--- a/css/flag-icon.css
+++ b/css/flag-icon.css
@@ -717,8 +717,14 @@
 .flag-icon-us {
     background-image: url(../flags/4x3/us.svg)
 }
+.flag-icon-us {
+    background-image: url(../flags/4x3/us.svg)
+}
 .flag-icon-uy {
     background-image: url(../flags/4x3/uy.svg)
+}
+.flag-icon-uz {
+    background-image: url(../flags/4x3/uz.svg)
 }
 .flag-icon-vc {
     background-image: url(../flags/4x3/vc.svg)
