--- a/css/flag-icon.css
+++ b/css/flag-icon.css
@@ -759,6 +759,9 @@
 .flag-icon-ws {
     background-image: url(../flags/4x3/ws.svg)
 }
+.flag-icon-xk {
+    background-image: url(../flags/4x3/xk.svg)
+}
 .flag-icon-ye {
     background-image: url(../flags/4x3/ye.svg)
 }
