Adds the international flag

--- a/css/flag-icon.css
+++ b/css/flag-icon.css
@@ -327,6 +327,9 @@
 .flag-icon-ie {
     background-image: url(../flags/4x3/ie.svg)
 }
+.flag-icon-ie {
+    background-image: url(../flags/4x3/ii.svg)
+}
 .flag-icon-il {
     background-image: url(../flags/4x3/il.svg)
 }
