--- a/css/flag-icon.css
+++ b/css/flag-icon.css
@@ -324,7 +324,7 @@
 .flag-icon-ie {
     background-image: url(../flags/4x3/ie.svg)
 }
-.flag-icon-ie {
+.flag-icon-ii {
     background-image: url(../flags/4x3/ii.svg)
 }
 .flag-icon-il {
